--- a/HospitalMVC/Views/Departman/Yeni.cshtml
+++ b/HospitalMVC/Views/Departman/Yeni.cshtml
@@ -12,6 +12,7 @@
     
     @Html.LabelFor(m=>m.DepartmanName)
     @Html.TextBoxFor(m=>m.DepartmanName)
+    @Html.ValidationMessageFor(m=>m.DepartmanName)
 </div>
 @Html.HiddenFor(m=>m.Id)
 <button type="submit" class="btn btn-success">Kaydet</button>
