--- a/HospitalMVC/Views/Appointment/Yeni.cshtml
+++ b/HospitalMVC/Views/Appointment/Yeni.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Yeni";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@Html.ValidationSummary()
 @using (Html.BeginForm("Kaydet", "Appointment", FormMethod.Post))
 {
     <div class="form-group" style="background-size:unset">
