--- a/HospitalMVC/Views/Doctor/Yeni.cshtml
+++ b/HospitalMVC/Views/Doctor/Yeni.cshtml
@@ -5,6 +5,7 @@
 }
 
 
+@Html.ValidationSummary()
 @using (Html.BeginForm("Kaydet", "Doctor", FormMethod.Post))
 {
     <div class="form-group" style="background-size:unset">
