--- a/HospitalMVC/Views/Doctor/Yeni.cshtml
+++ b/HospitalMVC/Views/Doctor/Yeni.cshtml
@@ -36,3 +36,9 @@
     @Html.HiddenFor(m => m.Doctors.Id)
     <button type="submit" class="btn btn-success">Kaydet</button>
 }
+@section Scripts{
+
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
