--- a/HospitalMVC/Views/Prescription/Yeni.cshtml
+++ b/HospitalMVC/Views/Prescription/Yeni.cshtml
@@ -25,3 +25,9 @@
 
     <button type="submit" class="btn btn-success">Kaydet</button>
 }
+@section Scripts{
+
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
