--- a/HospitalMVC/Views/Doctor/Yeni.cshtml
+++ b/HospitalMVC/Views/Doctor/Yeni.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+@Html.AntiForgeryToken()
 @Html.ValidationSummary()
 @using (Html.BeginForm("Kaydet", "Doctor", FormMethod.Post))
 {
