--- a/HospitalMVC/Views/Doctor/Index.cshtml
+++ b/HospitalMVC/Views/Doctor/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <a class="btn btn-success" href="/Doctor/Yeni">NewDoctor</a>
-<table class="table table-bordered">
+<table class="table table-bordered" id="tblDoctor">
     <thead>
         <tr>
             <th>Id</th>
@@ -29,7 +29,7 @@
             <td>@doctors.Departmans.DepartmanName</td>
             <td>@doctors.Phone</td>
             <td><a class="btn btn-primary" href="/Doctor/Update/@doctors.Id">Update</a></td>
-            <td><a class="btn btn-warning" href="/Doctor/Delete/@doctors.Id">Delete</a></td>
+            <td><a class="btn btn-warning btnDoctorDelete" data-id="@doctors.Id">Delete</a></td>
         </tr>
         }
     </tbody>
