--- a/HospitalMVC/Views/Shared/_Layout.cshtml
+++ b/HospitalMVC/Views/Shared/_Layout.cshtml
@@ -19,7 +19,10 @@
     @RenderBody()
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-   @RenderSection("Scripts",false)
+    <script src="~/Scripts/custom.js"></script>
+    <script src="~/Scripts/bootbox.min.js"></script>
+    @RenderSection("Scripts", false)
+
 </body>
 
 </html>
