--- a/HospitalMVC/Views/Shared/_Navbar.cshtml
+++ b/HospitalMVC/Views/Shared/_Navbar.cshtml
@@ -4,10 +4,11 @@
             <a class="navbar-brand" href="#">HospitalWeb</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Departman</a></li>
-            <li><a href="#">Doctor</a></li>
-            <li><a href="#">Prescriptions</a></li>
-            <li><a href="#">Sick</a></li>
+            <li class="active"><a href="/Departman">Departman</a></li>
+            <li><a href="/Doctor">Doctor</a></li>
+            <li><a href="/Prescription">Prescriptions</a></li>
+            <li><a href="/Sick">Sick</a></li>
+            <li><a href="/Security/Logout">Logout</a></li>
         </ul>
     </div>
 </nav>
